syntax = "proto3";
option java_package="cn.migu.selection.proto.base";
message RecommendFamousResponse{
	string pluginCode=1;
	string status=2;
	string isvisable=3;
	RecommendFamousData data=4;
	string messageDesc=5;

}
message	RecommendFamousData{
	string isMarginTop=1;
	string isMarginBottom=2;
	string isPaddingTop=3;
	string isShowLine=4;
	string showType =5;
	string linkPrefix=6;
	string linkDesc=7;
	string linkUrl=8;
	string picUrl=9;
}